--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -8,7 +8,8 @@
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
 		"format": "prettier --cache --write .",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"shadcn:add": "pnpx shadcn-ui@latest add"
 	},
 	"dependencies": {
 		"@mono/core": "workspace:^",
@@ -18,6 +19,7 @@
 		"lucide-react": "^0.373.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-resizable-panels": "^2.0.18",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
 		"zustand": "^4.5.2"
