--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -9,7 +9,8 @@
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
 		"format": "prettier --cache --write .",
 		"preview": "vite preview",
-		"shadcn:add": "pnpx shadcn-ui@latest add"
+		"shadcn:add": "pnpx shadcn-ui@latest add",
+		"add": "pnpm add"
 	},
 	"dependencies": {
 		"@mono/core": "workspace:^",
@@ -20,6 +21,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-resizable-panels": "^2.0.18",
+		"stackblur-canvas": "^2.7.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
 		"zustand": "^4.5.2"
