--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -28,6 +28,7 @@
 		"stackblur-canvas": "^2.7.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.23.5",
 		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
