--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -21,6 +21,7 @@
 		"@radix-ui/react-switch": "^1.0.3",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"lodash": "^4.17.21",
 		"lucide-react": "^0.373.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -34,6 +35,7 @@
 	"devDependencies": {
 		"@eslint/eslintrc": "^3.0.2",
 		"@eslint/js": "^9.1.1",
+		"@types/lodash": "^4.17.0",
 		"@types/node": "^20.12.7",
 		"@types/react": "^18.2.66",
 		"@types/react-dom": "^18.2.22",
