--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,14 +18,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - uses: pnpm/action-setup@v3
+        with:
+          version: 8
+
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
-        run: |
-          npm install -g pnpm
-          pnpm --force ci
+
+      - name: Install dependencies
+        run: pnpm install
 
       - name: Build
         run: CI=false pnpm run build --if-present
