--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -16,6 +16,7 @@
 		"@mono/core": "workspace:^",
 		"@radix-ui/react-accordion": "^1.1.2",
 		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-select": "^2.0.0",
 		"@radix-ui/react-slider": "^1.1.2",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-switch": "^1.0.3",
