--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -20,6 +20,7 @@
 		"@radix-ui/react-slider": "^1.1.2",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-switch": "^1.0.3",
+		"@reactuses/core": "^5.0.13",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"lodash": "^4.17.21",
