--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -20,7 +20,8 @@
 		"baseUrl": ".",
 		"paths": {
 			"@/*": ["./src/*"]
-		}
+		},
+		"noImplicitAny": false
 	},
 	"include": ["src", "vite.config.ts"]
 }
