--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -29,6 +29,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-resizable-panels": "^2.0.18",
+		"react-rnd": "^10.4.10",
 		"stackblur-canvas": "^2.7.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
