--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -27,6 +27,7 @@
 		"lodash": "^4.17.21",
 		"lucide-react": "^0.373.0",
 		"react": "^18.2.0",
+		"react-colorful": "^5.6.1",
 		"react-dom": "^18.2.0",
 		"react-resizable-panels": "^2.0.18",
 		"react-rnd": "^10.4.10",
