--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -23,5 +23,5 @@
 		},
 		"noImplicitAny": false
 	},
-	"include": ["src", "vite.config.ts"]
+	"include": ["src", "vite.config.ts", "global.d.ts"]
 }
