--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,17 +51,7 @@ jobs:
                 ;;
             esac
           else
-            COMMIT_MESSAGE=$(git log -1 --pretty=%B)
-            if echo "$COMMIT_MESSAGE" | grep -q "MAJOR"; then
-              echo "::set-output name=version_type::major"
-            elif echo "$COMMIT_MESSAGE" | grep -iq "feature feat"; then
-              echo "::set-output name=version_type::minor"
-            elif echo "$COMMIT_MESSAGE" | grep -iq "fix bug"; then
-              echo "::set-output name=version_type::patch"
-            else
-              echo "No version bump keyword found in the commit message."
-              exit 1
-            fi
+            node ./scripts/determine-version-bump.js
           fi
 
       - name: Bump version
