--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,20 +61,20 @@ jobs:
       - name: Commit version bump and create tag
         id: commit_version
         run: |
-          git config --global user.name 'obov'
-          git config --global user.email 'obov3e@gmail.com'
           git add package.json
           git commit -m "chore(release): bump version"
           NEW_VERSION=$(node -p "require('./package.json').version")
-          echo "::set-output name=new_version::$NEW_VERSION"
-          git tag -a "v$NEW_VERSION" -m "Release version $NEW_VERSION"
+          echo "new_version=${NEW_VERSION}" >> $GITHUB_ENV
+          git tag -a "v${NEW_VERSION}" -m "Release version ${NEW_VERSION}"
           git push origin --tags
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.YOHAN_PAT }}
 
       - name: Generate release notes
         run: |
-          chmod +x ./scripts/generate-release-notes.sh
-          ./scripts/generate-release-notes.sh
+          chmod +x ./scripts/generate-release-note.sh
+          ./scripts/generate-release-note.sh
 
       - name: Create GitHub Release
         id: create_release
