--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,8 @@ jobs:
         id: commit_version
         run: |
           git add package.json
+          git config --global user.email "obov3e@gmail.com"
+          git config --global user.name "obov"
           git commit -m "chore(release): bump version"
           NEW_VERSION=$(node -p "require('./package.json').version")
           echo "new_version=${NEW_VERSION}" >> $GITHUB_ENV
