--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,12 +58,16 @@ jobs:
         run: |
           node ./scripts/bump-version.js ${{ steps.determine_version.outputs.version_type }}
 
+      - name: Configure Git
+        run: |
+          git config --global user.name 'obov'
+          git config --global user.email 'obov3e@gmail.com'
+          git remote set-url origin https://x-access-token:${{ secrets.YOHAN_PAT }}@github.com/${{ github.repository }}
+
       - name: Commit version bump and create tag
         id: commit_version
         run: |
           git add package.json
-          git config --global user.email "obov3e@gmail.com"
-          git config --global user.name "obov"
           git commit -m "chore(release): bump version"
           NEW_VERSION=$(node -p "require('./package.json').version")
           echo "new_version=${NEW_VERSION}" >> $GITHUB_ENV
