--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,12 +41,12 @@ jobs:
         run: CI=false pnpm run build
 
       - name: Determine version bump type
-        id: determine_version
+        id: version_type
         run: |
           if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
             case "${{ github.event.inputs.version_type }}" in
               major|minor|patch)
-                echo "::set-output name=version_type::${{ github.event.inputs.version_type }}"
+                echo "version_type=${{ github.event.inputs.version_type }}" >> $GITHUB_ENV
                 ;;
               *)
                 echo "Invalid version type specified: ${{ github.event.inputs.version_type }}"
@@ -54,31 +54,40 @@ jobs:
                 ;;
             esac
           else
-            node ./scripts/determine-version-bump.js
+            version_type=$(node ./scripts/determine-version-type.js)
+            echo "value=${version_type}" >> $GITHUB_ENV
           fi
 
       - name: Bump version
+        id: new_version
         run: |
-          node ./scripts/bump-version.js ${{ steps.determine_version.outputs.version_type }}
+          node ./scripts/bump-version.js ${{ steps.version_type.outputs.value }}
 
       - name: Configure Git
         run: |
-          git config --global user.name 'obov'
-          git config --global user.email 'obov3e@gmail.com'
-          git remote set-url origin https://x-access-token:${{ secrets.YOHAN_PAT }}@github.com/${{ github.repository }}
+          git config --global user.name ${{ secrets.USER_NAME }}
+          git config --global user.email ${{ secrets.USER_EMAIL }}
+          git remote set-url origin https://x-access-token:${{ secrets.USER_PAT }}@github.com/${{ github.repository }}
 
-      - name: Commit version bump and create tag
+      - name: Commit version bump
         id: commit_version
         run: |
           git add package.json
           git commit -m "chore(release): bump version"
           NEW_VERSION=$(node -p "require('./package.json').version")
           echo "new_version=${NEW_VERSION}" >> $GITHUB_ENV
-          git tag -a "v${NEW_VERSION}" -m "Release version ${NEW_VERSION}"
-          git push origin --tags
           git push
         env:
-          GITHUB_TOKEN: ${{ secrets.YOHAN_PAT }}
+          GITHUB_TOKEN: ${{ secrets.USER_PAT }}
+
+      - name: Create tag
+        id: create_tag
+        run: |
+          NEW_VERSION=$(node -p "require('./package.json').version")
+          git tag -a "v${NEW_VERSION}" -m "Release version ${NEW_VERSION}"
+          git push origin --tags
+        env:
+          GITHUB_TOKEN: ${{ secrets.USER_PAT }}
 
       - name: Generate release notes
         run: |
@@ -87,7 +96,6 @@ jobs:
 
       - name: Create GitHub Release
         id: create_release
-        if: steps.determine_version.outputs.version_type == 'minor' || steps.determine_version.outputs.version_type == 'major'
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
