--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,12 +41,12 @@ jobs:
         run: CI=false pnpm run build
 
       - name: Determine version bump type
-        id: version_type
+        id: determine_version
         run: |
           if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
             case "${{ github.event.inputs.version_type }}" in
               major|minor|patch)
-                echo "version_type=${{ github.event.inputs.version_type }}" >> $GITHUB_ENV
+                echo "::set-output name=version_type::${{ github.event.inputs.version_type }}"
                 ;;
               *)
                 echo "Invalid version type specified: ${{ github.event.inputs.version_type }}"
@@ -54,14 +54,12 @@ jobs:
                 ;;
             esac
           else
-            version_type=$(node ./scripts/determine-version-type.js)
-            echo "value=${version_type}" >> $GITHUB_ENV
+            node ./scripts/determine-version-bump.js
           fi
 
       - name: Bump version
-        id: new_version
         run: |
-          node ./scripts/bump-version.js ${{ env.version_type }}
+          node ./scripts/bump-version.js ${{ steps.determine_version.outputs.version_type }}
 
       - name: Configure Git
         run: |
@@ -69,23 +67,16 @@ jobs:
           git config --global user.email ${{ secrets.USER_EMAIL }}
           git remote set-url origin https://x-access-token:${{ secrets.USER_PAT }}@github.com/${{ github.repository }}
 
-      - name: Commit version bump
+      - name: Commit version bump and create tag
         id: commit_version
         run: |
           git add package.json
           git commit -m "chore(release): bump version"
           NEW_VERSION=$(node -p "require('./package.json').version")
           echo "new_version=${NEW_VERSION}" >> $GITHUB_ENV
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.USER_PAT }}
-
-      - name: Create tag
-        id: create_tag
-        run: |
-          NEW_VERSION=$(node -p "require('./package.json').version")
           git tag -a "v${NEW_VERSION}" -m "Release version ${NEW_VERSION}"
           git push origin --tags
+          git push
         env:
           GITHUB_TOKEN: ${{ secrets.USER_PAT }}
 
