--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,7 +73,7 @@ jobs:
           git add package.json
           git commit -m "chore(release): bump version"
           NEW_VERSION=$(node -p "require('./package.json').version")
-          echo "new_version=${NEW_VERSION}" >> $GITHUB_ENV
+          echo "::set-output name=new_version::${NEW_VERSION}"
           git tag -a "v${NEW_VERSION}" -m "Release version ${NEW_VERSION}"
           git push origin --tags
           git push
