--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy to AWS S3 and CloudFront
+name: Release and Deploy to AWS S3 and CloudFront
 
 on:
   push:
@@ -15,7 +15,8 @@ permissions:
   contents: write
 
 jobs:
-  build:
+  release:
+    name: Create Release
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -37,7 +38,7 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Build
+      - name: Build project
         run: CI=false pnpm run build
 
       - name: Determine version bump type
@@ -97,6 +98,14 @@ jobs:
           draft: false
           prerelease: false
 
+  deploy:
+    name: Deploy to AWS S3 and Invalidate CloudFront Cache
+    runs-on: ubuntu-latest
+    needs: release # release job이 성공적으로 완료된 후에만 실행됨
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
@@ -105,7 +114,7 @@ jobs:
           aws-region: ap-northeast-2
 
       - name: Deploy to S3
-        run: aws s3 sync --region ap-northeast-2 ./packages/website/dist/ ${{ secrets.AWS_SECRET_BUCKET_NAME }} --delete
+        run: aws s3 sync --region ap-northeast-2 ./packages/website/dist/ s3://${{ secrets.AWS_SECRET_BUCKET_NAME }} --delete
 
       - name: Invalidate CloudFront cache
         run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_SECRET_DISTRIBUTION_ID }} --paths "/*"
