--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,9 +77,9 @@ jobs:
       - name: Commit version bump and create tag
         id: commit_version
         run: |
-          git add package.json
-          git commit -m "chore(release): bump version"
           NEW_VERSION=$(node -p "require('./package.json').version")
+          git add package.json
+          git commit -m "chore(release): bump version to ${NEW_VERSION}"
           echo "::set-output name=new_version::${NEW_VERSION}"
           git tag -a "v${NEW_VERSION}" -m "Release version ${NEW_VERSION}"
           git push origin --tags
