--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -107,18 +107,30 @@ jobs:
   deploy:
     name: Deploy to AWS S3 and Invalidate CloudFront Cache
     runs-on: ubuntu-latest
-    needs: release # release job이 성공적으로 완료된 후에만 실행됨
+    needs: release
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Check for changes in packages/website
+        id: check_changes
+        run: |
+          if git diff --quiet HEAD~1 HEAD -- packages/website; then
+            echo "No changes in packages/website. Skipping deployment."
+            echo "::set-output name=skip_deploy::true"
+          else
+            echo "Changes detected in packages/website. Proceeding with deployment."
+            echo "::set-output name=skip_deploy::false"
+
       - name: Download build artifacts
+        if: steps.check_changes.outputs.skip_deploy == 'false'
         uses: actions/download-artifact@v3
         with:
           name: build-artifacts
           path: ./packages/website/dist/
 
       - name: Configure AWS Credentials
+        if: steps.check_changes.outputs.skip_deploy == 'false'
         uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -126,7 +138,9 @@ jobs:
           aws-region: ap-northeast-2
 
       - name: Deploy to S3
-        run: aws s3 sync --region ap-northeast-2 ./packages/website/dist/ ${{ secrets.AWS_SECRET_BUCKET_NAME }} --delete
+        if: steps.check_changes.outputs.skip_deploy == 'false'
+        run: aws s3 sync --region ap-northeast-2 ./packages/website/dist/ s3://${{ secrets.AWS_SECRET_BUCKET_NAME }} --delete
 
       - name: Invalidate CloudFront cache
+        if: steps.check_changes.outputs.skip_deploy == 'false'
         run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_SECRET_DISTRIBUTION_ID }} --paths "/*"
