refactor: relocate cores

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -19,10 +19,9 @@
 		"noFallthroughCasesInSwitch": true,
 		"baseUrl": ".",
 		"paths": {
-			"@sevingu/core": ["packages/core"],
 			"@/*": ["./src/*"]
 		},
 		"noImplicitAny": false
 	},
-	"include": ["src", "vite.config.ts"]
+	"include": ["./**/*"]
 }
