--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -13,7 +13,7 @@
 		"add": "pnpm add"
 	},
 	"dependencies": {
-		"@mono/core": "workspace:^",
+		"@sevingu/core": "workspace:*",
 		"@radix-ui/react-accordion": "^1.1.2",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-select": "^2.0.0",
@@ -24,7 +24,6 @@
 		"@reactuses/core": "^5.0.13",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
-		"jsfeat": "^0.0.8",
 		"lodash": "^4.17.21",
 		"lucide-react": "^0.373.0",
 		"react": "^18.2.0",
@@ -32,10 +31,8 @@
 		"react-dom": "^18.2.0",
 		"react-resizable-panels": "^2.0.18",
 		"react-rnd": "^10.4.10",
-		"stackblur-canvas": "^2.7.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
-		"zod": "^3.23.5",
 		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
