--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -13,7 +13,6 @@
 		"add": "pnpm add"
 	},
 	"dependencies": {
-		"@sevingu/core": "workspace:*",
 		"@radix-ui/react-accordion": "^1.1.2",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-select": "^2.0.0",
@@ -22,6 +21,7 @@
 		"@radix-ui/react-switch": "^1.0.3",
 		"@radix-ui/react-tooltip": "^1.0.7",
 		"@reactuses/core": "^5.0.13",
+		"@sevingu/core": "workspace:*",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"lodash": "^4.17.21",
@@ -33,6 +33,7 @@
 		"react-rnd": "^10.4.10",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.23.5",
 		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
